# learn-open-gl

./: .gitignore  README.md
Lesson_3/: CMakeLists.txt  main.cpp
Lesson_3/glad/: glad.h
Lesson_4/: CMakeLists.txt  main.cpp  platform.h
Lesson_4/shader/: CMakeLists.txt  shader.cpp  shader.h
Lesson_4/vertex/: CMakeLists.txt  vertex.cpp  vertex.h
Lesson_4/window/: CMakeLists.txt  window.cpp  window.h
Lesson_5/: .clang_complete  Makefile
Lesson_5/include/: Window.hpp  deps.hpp
Lesson_5/src/: Window.cpp  main.cpp
Lesson_6/: .clang_complete  CMakeLists.txt  deps.hpp  main.cpp
Lesson_6/core/mash/: mash.cpp  mash.hpp  vertex.cpp  vertex.hpp
Lesson_6/core/random/: randomgenerator.cpp  randomgenerator.hpp
Lesson_6/core/shader/: shader.cpp  shader.hpp
Lesson_6/core/texture/: stb_image.cpp  texture.cpp  texture.hpp  texturegen.cpp  texturegen.hpp
Lesson_6/core/window/: window.cpp  window.hpp
Lesson_6/dependencies/: CMakeLists.txt
Lesson_6/resources/shaders/: fs.glsl  vs.glsl
Lesson_7/: CMakeLists.txt
Lesson_7/core/: incs.hpp  main.cpp
Lesson_7/core/logger/: logger.cpp  logger.hpp
Lesson_7/core/mash/: mash.cpp  mash.hpp  vertex.cpp  vertex.hpp
Lesson_7/core/mash/templates/: templates.cpp  templates.hpp
Lesson_7/core/shader/: shader.cpp  shader.hpp
Lesson_7/core/texture/: texture.cpp  texture.hpp  texturegen.cpp  texturegen.hpp
Lesson_7/core/window/: window.cpp  window.hpp
Lesson_7/resources/shaders/: fs.glsl  vs.glsl
